# Trading-System

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DECISIONS.md  DEVELOPMENT_RULES.md  FOUNDATION.md  LICENSE  PHASE2_ARCHITECTURE_REVIEW.md  PHASE2_RESEARCH.md  PROJECT_AUDIT.txt  README.md  ROADMAP.md  TEST_IMPLEMENTER.md  Trading-System  WORKFLOW.md  bootstrap.sh  fundamental_analysis.py  get_stock_data.py  hello.py  install.sh  opencode.json  opencode.jsonc  pyproject.toml  requirements.txt  ync
.github/: PULL_REQUEST_TEMPLATE.md  SETUP-GUIDE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-fix.yml  ci.yml  lint.yml  tests.yml
.opencode/agents/: agent.md  architect.md  ceo.md  cloud-sync.md  code-reviewer.md  coder.md  data-engineer.md  deep-thinker.md  documenter.md  elite-coder.md  error-fixer.md  experiment-runner.md  fixer.md  github-autopilot.md  github-pusher.md  implementer.md  india-market-expert.md  indicator-builder.md  opencode-manager.md  orchestrator.md  pine-script.md  portfolio-optimizer.md  researcher.md  reviewer.md  risk-manager.md  strategy-developer.md  technical-analyst.md  tester.md  trading-execution.md  trading-monitor.md  trading-report.md  trading-research.md  trading-risk.md  trading-strategy.md  ultrathink.md  web-browser.md
.opencode/commands/: analyze.md  backtest.md  build.md  india.md  parallel.md  portfolio.md  push.md  review.md  risk.md  scan.md  sentiment.md  strategy.md
.opencode/skills/analyze-stock/: SKILL.md
.opencode/skills/backtest-review/: SKILL.md
.opencode/skills/backtest-strategy/: SKILL.md
.opencode/skills/build-indicator/: SKILL.md
.opencode/skills/check-risk/: SKILL.md
.opencode/skills/cleanup/: SKILL.md
.opencode/skills/code-review/: SKILL.md
.opencode/skills/deep-research/: SKILL.md
.opencode/skills/equity-research-report/: SKILL.md
.opencode/skills/equity-research-report/references/: structure_contract.md  style_contract.md
.opencode/skills/experiment-setup/: SKILL.md
.opencode/skills/find-opportunities/: SKILL.md
.opencode/skills/github-pusher/: SKILL.md
.opencode/skills/india-expert/: SKILL.md
.opencode/skills/market-sentiment/: SKILL.md
.opencode/skills/portfolio-optimize/: SKILL.md
.opencode/skills/report-writing/: SKILL.md
.opencode/skills/research-intake/: SKILL.md
.opencode/skills/strategy-dev/: SKILL.md
.opencode/skills/task-decomposition/: SKILL.md
.opencode/skills/task-splitter/: SKILL.md
.opencode/skills/web-search/: SKILL.md
.opencode/skills/youtube-transcript/: SKILL.md
agent/: README.md
backup_agents/: architect.md  backtest-engineer.md  cloud-sync.md  coder.md  documenter.md  experiment-runner.md  fundamental-analyst.md  implementer.md  market-scanner.md  orchestrator.md  researcher.md  reviewer.md  sentiment-analyst.md  tester.md  youtube-research.md  youtube-transcript-analyst.md
config/: README.md  data.yaml  logging.yaml
data/: README.md
docs/: ARCHITECTURE_CONSTITUTION.md  README.md
docs/amendments/: 001-2026-07-15-architecture-constitution-creation.md  002-2026-07-15-parallel-task-orchestration.md  003-2026-07-15-orchestrator-v2.md  004-2026-07-16-evidence-first-research.md  005-2026-07-18-packaging-layout-decision.md  README.md
markets/india/: README.md
markets/us/: README.md
pine/: README.md
python/: README.md
python/memory_memory/: PROVIDER_ABSTRACTION_DESIGN.md  README.md  __init__.py  base.py  manager.py  registry.py
python/memory_memory/examples/: memory_examples.py
python/memory_memory/providers/: __init__.py  chromadb_provider.py  cognee_provider.py  duckdb_provider.py  mem0_provider.py
python/memory_memory/tests/: test_memory.py
python/src/trading_system/: __init__.py  config.py  constants.py
python/src/trading_system/data/: __init__.py  cache.py  datasource.py  downloader.py  exceptions.py  loader.py  provider.py  retry.py  session.py  storage.py  validator.py
python/src/trading_system/indicators/: __init__.py  mansfield_rs.py  moving_average.py  normalization.py  ranking.py  relative_strength.py
python/src/trading_system/models/: __init__.py  candle.py  market_data.py  ranking_result.py  rs_signal.py  symbol.py
python/src/trading_system/portfolio/: __init__.py  allocation.py  portfolio.py  position.py  risk.py  sizing.py
python/src/trading_system/scanner/: __init__.py  filters.py  pipeline.py  result.py  scanner.py
python/src/trading_system/strategies/: __init__.py  base.py  evaluator.py  rules.py  signal.py
python/src/trading_system/tools/: __init__.py  analytics.py  backtest.py  market_utils.py  paper_trading.py  risk_analyzer.py
reports/: README.md
research/: README.md
scripts/: README.md  bootstrap-new-repo.sh  phone-cleanup.sh  smart-push.sh
skills/analyze-stock/: SKILL.md
skills/backtest-strategy/: SKILL.md
skills/build-indicator/: SKILL.md
skills/check-risk/: SKILL.md
skills/find-opportunities/: SKILL.md
skills/india-expert/: SKILL.md
skills/market-sentiment/: SKILL.md
skills/portfolio-optimize/: SKILL.md
skills/strategy-dev/: SKILL.md
tests/: README.md
tests/unit/data/: test_cache.py  test_downloader.py  test_loader.py  test_provider.py  test_retry.py  test_storage.py  test_validator.py
tests/unit/indicators/: test_mansfield_rs.py  test_moving_average.py  test_normalization.py  test_ranking.py  test_relative_strength.py
tests/unit/portfolio/: test_allocation.py  test_portfolio.py  test_position.py  test_risk.py  test_sizing.py
tests/unit/scanner/: test_filters.py  test_pipeline.py  test_scanner.py
tests/unit/strategies/: test_evaluator.py  test_rules.py  test_signal.py
