[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-system"
version = "0.1.0"
description = "Institutional-grade trading research platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Trading Team"}
]
keywords = ["trading", "finance", "backtesting", "quantitative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Banking Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core data handling
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "xarray>=2023.1.0",
    
    # Data fetching and APIs
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "websocket-client>=1.6.0",
    
    # Database and storage
    "sqlalchemy>=2.0.0",
    "redis>=4.6.0",
    "h5py>=3.9.0",
    
    # Technical analysis
    "ta-lib>=0.4.28",
    "pandas-ta>=0.3.14b",
    
    # Backtesting
    "backtesting>=0.3.0",
    
    # Machine learning
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    
    # Optimization
    "scipy>=1.11.0",
    "optuna>=3.4.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.16.0",
    
    # Configuration and logging
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    
    # Utilities
    "tqdm>=4.66.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    
    # Async support
    "asyncio>=3.4.3",
    "aioredis>=2.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.80.0",
    
    # Linting and formatting
    "ruff>=0.1.0",
    "black>=23.7.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    
    # Type stubs
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0.0",
    "types-python-dateutil>=2.8.0",
]

research = [
    # Jupyter and notebooks
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    
    # Advanced analytics
    "statsmodels>=0.14.0",
    "arch>=6.0.0",
]

live-trading = [
    # Broker APIs (add specific brokers as needed)
    # "ccxt>=4.1.0",  # Cryptocurrency exchanges
    # "ib_insync>=0.9.0",  # Interactive Brokers
    # "alpaca-trade-api>=3.0.0",  # Alpaca
    
    # Real-time data
    "websockets>=11.0.0",
    "fastapi>=0.103.0",
    "uvicorn>=0.23.0",
]

reporting = [
    # Report generation
    "jinja2>=3.1.0",
    "reportlab>=4.0.0",
    "openpyxl>=3.1.0",
    
    # Dashboards
    "streamlit>=1.26.0",
    "dash>=2.12.0",
]

all = [
    "trading-system[dev,research,live-trading,reporting]",
]

[project.urls]
Homepage = "https://github.com/your-org/trading-system"
Documentation = "https://github.com/your-org/trading-system/docs"
Repository = "https://github.com/your-org/trading-system.git"
Issues = "https://github.com/your-org/trading-system/issues"

[tool.setuptools]
packages = ["python"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = """
/(
    \\.eggs
    | \\.git
    | \\.hg
    | \\.mypy_cache
    | \\.tox
    | \\.venv
    | _build
    | buck-out
    | build
    | dist
)/
"""

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "B904", # raise without from inside except
]

[tool.ruff.isort]
known-first-party = ["python"]
known-third-party = ["numpy", "pandas"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=python",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "backtest: marks tests as backtesting tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["python"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]