[project]
name = "trading-system"
version = "0.1.0"
description = "Phone-first institutional trading research workspace"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [{ name = "Operator" }]
keywords = ["trading", "research", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "httpx>=0.28,<1",
    "pandas>=2.3,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python/src"]
